Update Readme Repository info

--- a/README.rdoc
+++ b/README.rdoc
@@ -4,12 +4,16 @@
 #  If creating from
 #     Scratch: rails new sample_app --skip-test-unit --database=postgresql
 #
-         - git init
+         - 
 #        - Change database names in config/databases.yml#
 #        - Replace .gitignore  
 #        - Change database names in config/databases.yml
 #        - bundle install / bundle update / bundle install
 #        - rails generate rspec:install
+#        - git init / commit
+#        - Create Repository
+#        - git remote set-url origin https://github.com/tmulherin/sample_app.git
+#        - git remote set-url origin https://github.com/tmulherin/sample_app.git
 #  
 #############################################################################################
 */
